[gd_scene load_steps=3 format=3 uid="uid://c6vumewgnfquy"]

[ext_resource type="Script" path="res://addons/block_code/ui/block_canvas/block_canvas.gd" id="1_tk8h2"]
[ext_resource type="Texture2D" uid="uid://cmusxj1ppspnp" path="res://addons/block_code/block_code_node/block_code_node.svg" id="2_710vn"]

[node name="BlockCanvas" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_tk8h2")

[node name="Panel" type="Panel" parent="."]
layout_mode = 2

[node name="WindowScroll" type="ScrollContainer" parent="."]
unique_name_in_owner = true
layout_mode = 2

[node name="Window" type="Control" parent="WindowScroll"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 1

[node name="SelectNodeBox" type="VBoxContainer" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_vertical = 4

[node name="Label" type="Label" parent="SelectNodeBox"]
layout_mode = 2
text = "First, select a node in the current scene."
horizontal_alignment = 1

[node name="CreateBlockCodeBox" type="VBoxContainer" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_vertical = 4

[node name="Label" type="Label" parent="CreateBlockCodeBox"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
text = "Use block coding to create custom behavior and game mechanics for this node."
horizontal_alignment = 1
autowrap_mode = 2

[node name="AddBlockCodeButton" type="Button" parent="CreateBlockCodeBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
text = "Add Block Code"
icon = ExtResource("2_710vn")

[connection signal="pressed" from="CreateBlockCodeBox/AddBlockCodeButton" to="." method="_on_add_block_code_button_pressed"]
